package DesignPatterns.StructuralType.Proxy.DynamicProxy;

/**
 * @author Yu
 */
public interface ITeacherDao {
    void teach();

    String write(String name);
}
